--- a/TODO
+++ b/TODO
@@ -2,14 +2,20 @@
 Is it possible to inline template attributes? We want attributes.
 
 == Models
+x Abstract models
+x Subclassing not complete
 Change to name 'category'
 Check subclassing
 
+== API
+x deletes to be enabled
+Reparent_choices is a mess
+
 == Admin
 x indent title column rename
-Needs abstracting for model
+x invert chars
+x Needs abstracting for model
 Auto-slug
-Want the tree as tree (or root), or upend the visual prefix?
 
 == Admin forms
 Optional categorisation
@@ -18,25 +24,19 @@ Term element, Term parents - no verification term exists.
 
 Humm. Verification (for what?) not hard to add.
 
-Validate tree_id never chages for a term.
 
 == objects
 Unpublishing
 
-== API
-deletes to be enabled
-Reparent_choices is a mess
-
 == Rendering
-Why are dispalys sometimes hanging?
+Why are displays sometimes hanging?
 
 == SVGs
 Can make relative sizing?
 
-== Models
-x Abstract models
-Get rid of slugs, they're for abstraction
-Reverse lookups
+== Tests
+!!!
 
 == Other
 Auto-slug code
+Do builtins work in packaging?
