--- a/taxonomy/TODO
+++ b/taxonomy/TODO
@@ -1,18 +1,19 @@
 == templates
 Is it possible to inline template attributes? We want attributes.
-Generalise breadcrumbs to term_list, term_anchor_list
+x Generalise breadcrumbs to term_list, term_anchor_list
 
 == Models
 x Abstract models
 x Subclassing not complete
 Change to name 'category'
-Check subclassing
-killing related managers
-
+x Check subclassing
+x killing related managers
+remove concrete classes
 
 == API
 x deletes to be enabled
 Reparent_choices is a mess
+Multiple models test
 
 == Admin
 x indent title column rename
@@ -42,4 +43,4 @@ Can make relative sizing?
 
 == Other
 Auto-slug code
-Do builtins work in packaging?
+x Do builtins work in packaging?
